--- a/index.html
+++ b/index.html
@@ -297,6 +297,55 @@
             </div>
         </div>
     </section>
+
+    <footer class="footer">
+        <div class="container-fluid">
+            <div class="row d-flex align-items-center">
+                <div class="col col-lg-3">
+                    <a href="#" class="header-link">
+                        <img src="./img/logo.svg" alt="moneyexchange" class="header-logo">
+                    </a>
+                </div>
+                <!-- /.col-lg-2 -->
+                <div class=" col col-lg-6">
+                    <nav>
+                        <ul class="navigation d-flex justify-content-between  align-items-center">
+                            <li class="navigation-item">
+                                <a href="#" class="navigation-link">
+                                Карта сайта
+                            </a>
+                            </li>
+                            <li class="navigation-item">
+                                <a href="#" class="navigation-link">
+                                Предупреждение
+                            </a>
+                            </li>
+                            <li class="navigation-item">
+                                <a href="#" class="navigation-link">
+                                Правила сайта
+                            </a>
+                            </li>
+                            <li class="navigation-item">
+                                <a href="#" class="navigation-link">
+                                Обмен
+                            </a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+                <!-- /.col-lg-7 -->
+                <div class="col col-lg-3 d-flex justify-content-end d-flex align-items-center px-5">
+                    <a href="#" class="social-link px-2">
+                        <img src="img/vk.png" alt="вконтакте" class="social">
+                    </a>
+                    <a href="#" class="social-link px-2">
+                        <img src="img/instagram.png" alt="инстаграмм" class="social">
+                    </a>
+                </div>
+                <!-- /.col-lg-3 -->
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
