--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <link rel="stylesheet" href="css/style.css">
 
-    <script src="js/popper.min.js"></script>
+
 </head>
 
 <body>
@@ -68,7 +68,7 @@
             </span>
 
             <div class="row d-flex justify-content-center calc-change align-self-end">
-                <div class="col-4">
+                <div class="col-lg-4 col-md-8">
                     <span class="calc-change-title">Вы отдаете</span>
                     <span class="calc-change-sum">Сумма</span>
                     <div class="calc-input d-flex align-items-center">
@@ -83,8 +83,8 @@
                     </div>
                     <hr class="calc-line" />
                 </div>
-                <div class="col-1 d-flex justify-content-center align-self-end"><img src="img/arrows.svg" alt="" class=" arrows"></div>
-                <div class="col-4">
+                <div class="col-lg-1 col-md-4 d-flex justify-content-center align-self-end"><img src="img/arrows.svg" alt="" class=" arrows"></div>
+                <div class="col-lg-4 col-md-8 ">
                     <span class="calc-change-title">Вы получаете</span>
                     <span class="comission">c учетом комиссии ПС (0.5%)</span>
                     <span class="calc-change-sum">Сумма</span>
@@ -100,7 +100,7 @@
                     </div>
                     <hr class="calc-line">
                 </div>
-                <div class="col-2 align-self-end">
+                <div class="col-lg-3 col-md-4 align-self-end">
                     <button class="button-change">Обменять</button>
                 </div>
             </div>
@@ -111,19 +111,19 @@
     <section class="info">
         <div class="container">
             <div class="row">
-                <div class="col-4 p-3">
+                <div class="col-lg-4 col-md-9 p-3">
                     <div class="img-wrapper d-flex align-items-center"> <img src="img/info-1.png" alt="Безопасность" class="info-image"></div>
 
                     <h3 class="info-title">Безопасность</h3>
                     <p class="info-description ">Усиленная безопасность ваших обменов, усиленная безопасность от мошенников!</p>
                 </div>
-                <div class="col-4 p-3">
+                <div class="col-lg-4 col-md-9  p-3">
                     <div class="img-wrapper d-flex align-items-center"><img src="img/info-2.png" alt="Реферальная система" class="info-image">
                     </div>
                     <h3 class="info-title">Реферальная система</h3>
                     <p class="info-description ">На сервисе работает партнерская программа, за каждый обмен приведенного вами клиента, вы получаете 0.5% с нашей прибыли.</p>
                 </div>
-                <div class="col-4 p-3">
+                <div class="col-lg-4 col-md-9  p-3">
                     <div class="img-wrapper d-flex align-items-center"><img src="img/info-3.png" alt="Онлайн поддержка" class="info-image">
                     </div>
                     <h3 class="info-title">Онлайн поддержка</h3>
@@ -133,14 +133,14 @@
         </div>
     </section>
     <section class="history ">
-        <div class="container-fluid history-wrapper ">
+        <div class="container history-wrapper ">
             <div class="row  d-flex align-items-center">
-                <div class="col-5 history-content">
+                <div class="col-lg-5  col-md-12 history-content">
                     <h2 class="history-title ">Сервис обмена электронных валют с 5-летней историей</h2>
                     <p class="history-description">За время работы мы приобрели репутацию проверенного партнера и делаем все возможное, чтобы ваши впечатления от нашего сервиса были только благоприятными.</p>
                 </div>
                 <!-- /.col-6 -->
-                <div class="col-7">
+                <div class="col-lg-7 col-md-12">
                     <div class="image-history-wrapper"> <img src="img/history.png" alt="" class="image-history"></div>
 
                 </div>
@@ -154,7 +154,7 @@
         <div class="container">
             <h2 class="reserve-title">Резерв валюты</h2>
             <div class="row">
-                <div class="col-3 d-flex currency-info align-items-center">
+                <div class="col-lg-3 col-md-6 col-sm-6 d-flex currency-info align-items-center">
                     <div class="currency-icon yandex "> <img src="img/yandex.png" alt="" class="icon-currency"></div>
                     <!-- /.currency-icon -->
                     <div class="currency">
@@ -166,7 +166,7 @@
                     <!-- /.currency -->
                 </div>
                 <!-- /.col-3 d-flex align-items-center -->
-                <div class="col-3 currency-info d-flex align-items-center">
+                <div class="col-lg-3 col-md-6  col-sm-6 currency-info d-flex align-items-center">
                     <div class="currency-icon ethereum">
                         <img src="img/etherium.png" alt="" class="icon-currency">
                     </div>
@@ -180,7 +180,7 @@
                     <!-- /.currency -->
                 </div>
                 <!-- /.col-3 d-flex align-items-center -->
-                <div class="col-3 currency-info d-flex align-items-center">
+                <div class="col-lg-3 col-md-6 col-sm-6  currency-info d-flex align-items-center">
                     <div class="currency-icon bitcoin"><img src="img/bitcoin.png" alt="" class="icon-currency"></div>
                     <!-- /.currency-icon -->
                     <div class="currency ">
@@ -192,7 +192,7 @@
                     <!-- /.currency -->
                 </div>
                 <!-- /.col-3 d-flex align-items-center -->
-                <div class="col-3 currency-info d-flex align-items-center">
+                <div class="col-lg-3 col-md-6  col-sm-6  currency-info d-flex align-items-center">
                     <div class="currency-icon sberbank"><img src="img/sberpank.png" alt="" class="icon-currency"></div>
                     <!-- /.currency-icon -->
                     <div class="currency ">
@@ -204,7 +204,7 @@
                     <!-- /.currency -->
                 </div>
                 <!-- /.col-3 d-flex align-items-center -->
-                <div class="col-3 currency-info d-flex align-items-center">
+                <div class="col-lg-3 col-md-6 col-sm-6  currency-info d-flex align-items-center">
                     <div class="currency-icon privat"><img src="img/private.png" alt="" class="icon-currency"></div>
                     <!-- /.currency-icon -->
                     <div class="currency ">
@@ -216,7 +216,7 @@
                     <!-- /.currency -->
                 </div>
                 <!-- /.col-3 d-flex align-items-center -->
-                <div class="col-3 currency-info d-flex align-items-center">
+                <div class="col-lg-3 col-md-6  col-sm-6 currency-info d-flex align-items-center">
                     <div class="currency-icon paypal"><img src="img/paypal.png" alt="" class="icon-currency"></div>
                     <!-- /.currency-icon -->
                     <div class="currency  align-items-center">
@@ -228,7 +228,7 @@
                     <!-- /.currency -->
                 </div>
                 <!-- /.col-3 d-flex align-items-center -->
-                <div class="col-3 currency-info d-flex align-items-center">
+                <div class="col-lg-3 col-md-6 col-sm-6  currency-info d-flex align-items-center">
                     <div class="currency-icon pm d-flex align-items-center"><img src="img/PM.png" alt="" class="icon-currency"></div>
                     <!-- /.currency-icon -->
                     <div class="currency">
@@ -240,7 +240,7 @@
                     <!-- /.currency -->
                 </div>
                 <!-- /.col-3 d-flex align-items-center -->
-                <div class="col-3 currency-info d-flex align-items-center">
+                <div class="col-lg-3 col-md-6 col-sm-6  currency-info d-flex align-items-center">
                     <div class="currency-icon qiwi"><img src="img/qiwi.png" alt="" class="icon-currency"></div>
                     <!-- /.currency-icon -->
                     <div class="currency">
@@ -261,7 +261,7 @@
         <div class="container">
             <h3 class="clients-title">Что клиенты говорят о нас</h3>
             <div class="row">
-                <div class="col-6 comment">
+                <div class="col-lg-6 col-md-12 comment">
                     <p class="clients-comment">Киви переправил деньги не на кошелек, а на номер МТС - будьте внимательны. Даже в этом случаи делают возврат и переводят на приват. Особая благодарность оператору Марии.</p>
                     <!-- /.clients-comment -->
                     <span class="clients-name">Jacob Robertson</span>
@@ -269,7 +269,7 @@
 
                 </div>
                 <!-- /.col-6 -->
-                <div class="col-6 comment">
+                <div class="col-lg-6 col-md-12 comment">
                     <p class="clients-comment">3-й раз выполняю обмен. Все как всегда на отлично! Транзакции выполняются в течение 15-20 минут - что очень быстро + лучший ценник!</p>
                     <!-- /.clients-comment -->
                     <span class="clients-name">Morris Robertson</span>
@@ -285,11 +285,11 @@
     <section class="start-exchange ">
         <div class="container start-exchange-container">
             <div class="row">
-                <div class="col-6">
+                <div class="col-lg-6 col-md-12">
                     <div class="img-wrapper-exchange"> <img class="img-exchange" src="img/back-1.png" alt="" class="img-exchange"></div>
 
                 </div>
-                <div class="col-6 exchange">
+                <div class="col-lg-6 col-md-12 exchange">
                     <h3 class="exchange-title">Будем рады предоставить Вам качественный обмен валют на нашем сервисе!</h3>
                     <p class="exchange-subtitle">Начните обмен прямо сейчас</p>
                     <button class="button-exchange">Обменять</button>
@@ -301,13 +301,13 @@
     <footer class="footer">
         <div class="container-fluid">
             <div class="row d-flex align-items-center">
-                <div class="col col-lg-3">
+                <div class="col-lg-3 col-md-6">
                     <a href="#" class="header-link">
                         <img src="./img/logo.svg" alt="moneyexchange" class="header-logo">
                     </a>
                 </div>
                 <!-- /.col-lg-2 -->
-                <div class=" col col-lg-6">
+                <div class=" col-lg-6 col-md-12">
                     <nav>
                         <ul class="navigation d-flex justify-content-between  align-items-center">
                             <li class="navigation-item">
@@ -334,7 +334,7 @@
                     </nav>
                 </div>
                 <!-- /.col-lg-7 -->
-                <div class="col col-lg-3 d-flex justify-content-end d-flex align-items-center px-5">
+                <div class="col col-lg-3 col-md-6 d-flex justify-content-end d-flex align-items-center px-5">
                     <a href="#" class="social-link px-2">
                         <img src="img/vk.png" alt="вконтакте" class="social">
                     </a>
