--- a/index.html
+++ b/index.html
@@ -59,15 +59,16 @@
         </div>
     </header>
     <section class="calc">
-        <div class="container calc-container">
-            <span class="calc-header">
-                Мультивалютный <br> обменный сервис 24/7
-            </span>
-            <span class="calc-info">
-                Быстрый обмен без скрытых комиссий
-            </span>
+        <span class="calc-header">
+            Мультивалютный <br> обменный сервис 24/7
+        </span>
+        <span class="calc-info">
+            Быстрый обмен без скрытых комиссий
+        </span>
 
-            <div class="row d-flex justify-content-center calc-change align-self-end">
+        <div class="container calc-container">
+
+            <div class="row d-flex justify-content-center calc-change">
                 <div class="col-xl-4 col-md-8 col-sm-12">
                     <span class="calc-change-title">Вы отдаете</span>
                     <span class="calc-change-sum">Сумма</span>
@@ -303,7 +304,7 @@
         </div>
     </section>
 
-    <footer class="footer ">
+    <footer class="footer">
         <div class="container-fluid ">
             <div class="row d-flex align-items-center ">
                 <div class=" col-xl-3 col-lg-12 d-flex justify-content-center ">
