--- a/index.html
+++ b/index.html
@@ -18,44 +18,44 @@
 
 <body>
     <header class="header">
-        <div class="container-fluid">
-            <div class="row d-flex align-items-center ">
-                <div class=" col-lg-3 col-md-3 col-sm-12 d-flex justify-content-center">
-                    <a href="#" class="header-link">
-                        <img src="./img/logo.svg" alt="moneyexchange" class="header-logo">
-                    </a>
-                </div>
-                <!-- /.col-lg-2 -->
-                <div class=" col-lg-6  col-md-6 col-sm-6 col-xs-12">
-                    <nav>
-                        <ul class="navigation d-flex justify-content-center  align-items-center">
-                            <li class="navigation-item">
-                                <a href="#" class="navigation-link">
+        <div class="container-fluid"></div>
+        <div class="row d-flex align-items-center ">
+            <div class="col-xl-3 col-lg-4 col-md-3 col-sm-12 d-flex justify-content-center">
+                <a href="#" class="header-link">
+                    <img src="./img/logo.svg" alt="moneyexchange" class="header-logo">
+                </a>
+            </div>
+            <!-- /.col-lg-2 -->
+            <div class="col-xl-6  col-lg-5  col-md-6 col-sm-6 col-xs-12">
+                <nav>
+                    <ul class="navigation d-flex justify-content-center  align-items-center">
+                        <li class="navigation-item">
+                            <a href="#" class="navigation-link">
                                 Компания
                             </a>
-                            </li>
-                            <li class="navigation-item">
-                                <a href="#" class="navigation-link">
+                        </li>
+                        <li class="navigation-item">
+                            <a href="#" class="navigation-link">
                                 Блог
                             </a>
-                            </li>
-                            <li class="navigation-item">
-                                <a href="#" class="navigation-link">
+                        </li>
+                        <li class="navigation-item">
+                            <a href="#" class="navigation-link">
                                 Контакты
                             </a>
-                            </li>
-                        </ul>
-                    </nav>
-                </div>
-                <!-- /.col-lg-7 -->
-                <div class=" col-lg-3  col-md-3 col-sm-6 col-xs-12 d-flex justify-content-center d-flex align-items-center">
-                    <a href="#" class="login-link">
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+            <!-- /.col-lg-7 -->
+            <div class="col-xl-3  col-lg-3  col-md-3 col-sm-6 col-xs-12 d-flex justify-content-center d-flex align-items-center">
+                <a href="#" class="login-link">
                         Войти
                     </a>
-                    <button class="button">Регистрация</button>
-                </div>
-                <!-- /.col-lg-3 -->
+                <button class="button">Регистрация</button>
             </div>
+            <!-- /.col-lg-3 -->
+        </div>
         </div>
     </header>
     <section class="calc">
@@ -115,7 +115,7 @@
             <div class="row">
                 <div class="col-lg-4 col-md-9 p-3 info-item">
                     <div class=" img-wrapper d-flex align-items-center ">
-                        <img src="img/info-1.png " alt="Безопасность " class="info-image ">
+                        <img src="img/info-1.png" alt="Безопасность " class="info-image ">
                     </div>
                     <h3 class="info-title ">Безопасность</h3>
                     <p class="info-description ">Усиленная безопасность ваших обменов, усиленная безопасность от мошенников!</p>
@@ -129,29 +129,34 @@
                 </div>
                 <div class="col-lg-4 col-md-9  p-3 info-item">
                     <div class=" img-wrapper d-flex align-items-center ">
-                        <img src="img/info-3.png " alt="Онлайн поддержка " class="info-image ">
+                        <img src="img/info-3.png" alt="Онлайн поддержка " class="info-image ">
                     </div>
-                    <h3 class="info-title ">Онлайн поддержка</h3>
+                    <h3 class="info-title">Онлайн поддержка</h3>
                     <p class="info-description ">Четыре вида поддержки для наших клиентов: Телеграмм канал, E-mail поддержка, и мобильный номер (Viber).</p>
                 </div>
             </div>
         </div>
     </section>
     <section class="history ">
-        <div class="container history-wrapper ">
-            <div class="row d-flex align-items-center ">
-                <div class="col-lg-5 col-md-12 history-content ">
-                    <h2 class="history-title ">Сервис обмена электронных валют с 5-летней историей</h2>
-                    <p class="history-description ">За время работы мы приобрели репутацию проверенного партнера и делаем все возможное, чтобы ваши впечатления от нашего сервиса были только благоприятными.</p>
-                </div>
-                <!-- /.col-6 -->
-                <div class="col-lg-7 col-md-12 ">
-                    <div class="image-history-wrapper "> <img src="img/history.png " alt=" " class="image-history "></div>
+        <div class="container">
+            <div class="history-wrapper">
+                <div class="row d-flex align-items-center m-0 p-0">
+                    <div class="col-lg-5 col-md-12 history-content ">
+                        <h2 class="history-title ">Сервис обмена электронных валют с 5-летней историей</h2>
+                        <p class="history-description ">За время работы мы приобрели репутацию проверенного партнера и делаем все возможное, чтобы ваши впечатления от нашего сервиса были только благоприятными.</p>
+                    </div>
+                    <!-- /.col-6 -->
+                    <div class="col-lg-7 col-md-12 ">
+                        <div class="image-history-wrapper "> <img src="img/history.png " alt=" " class="image-history "></div>
 
+                    </div>
+                    <!-- /.col-6 -->
                 </div>
-                <!-- /.col-6 -->
+
+                <!-- /.row -->
             </div>
-            <!-- /.row -->
+            <!-- /.history-wrapper -->
+
         </div>
     </section>
 
@@ -307,7 +312,7 @@
     <footer class="footer">
         <div class="container-fluid ">
             <div class="row d-flex align-items-center ">
-                <div class=" col-xl-3 col-lg-12 d-flex justify-content-center ">
+                <div class="col-xl-3 col-md-12 col-sm-12  d-flex justify-content-center ">
                     <a href="# " class="header-link ">
                         <img src="./img/logo.svg " alt="moneyexchange " class="header-logo ">
                     </a>
