--- a/index.html
+++ b/index.html
@@ -9,24 +9,24 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;700;900&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="css/bootstrap-grid.min.css">
-
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/bootstrap-grid.min.css" class="css">
+    <link rel="stylesheet" href="css/normalize.css" class="css">
+    <link rel="stylesheet" href="css/style.css" class="css">
 
 
 </head>
 
 <body>
     <header class="header">
-        <div class="container-fluid"></div>
+        <div class="container"></div>
         <div class="row d-flex align-items-center ">
-            <div class="col-xl-3 col-lg-4 col-md-3 col-sm-12 d-flex justify-content-center">
+            <div class="col col-xl-3 col-lg-4 col-md-3 col-sm-12 d-flex justify-content-center">
                 <a href="#" class="header-link">
                     <img src="./img/logo.svg" alt="moneyexchange" class="header-logo">
                 </a>
             </div>
             <!-- /.col-lg-2 -->
-            <div class="col-xl-6  col-lg-5  col-md-6 col-sm-6 col-xs-12">
+            <div class="col col-xl-6  col-lg-5  col-md-6 col-sm-6 col-xs-12">
                 <nav>
                     <ul class="navigation d-flex justify-content-center  align-items-center">
                         <li class="navigation-item">
@@ -48,7 +48,7 @@
                 </nav>
             </div>
             <!-- /.col-lg-7 -->
-            <div class="col-xl-3  col-lg-3  col-md-3 col-sm-6 col-xs-12 d-flex justify-content-center d-flex align-items-center">
+            <div class="col col-xl-3  col-lg-3  col-md-3 col-sm-6 col-xs-12 d-flex justify-content-center d-flex align-items-center p-0 m-0">
                 <a href="#" class="login-link">
                         Войти
                     </a>
@@ -113,21 +113,21 @@
     <section class="info">
         <div class="container">
             <div class="row">
-                <div class="col-lg-4 col-md-9 p-3 info-item">
+                <div class="col-lg-4 col-md-9  info-item">
                     <div class=" img-wrapper d-flex align-items-center ">
                         <img src="img/info-1.png" alt="Безопасность " class="info-image ">
                     </div>
                     <h3 class="info-title ">Безопасность</h3>
                     <p class="info-description ">Усиленная безопасность ваших обменов, усиленная безопасность от мошенников!</p>
                 </div>
-                <div class="col-lg-4 col-md-9 p-3 info-item">
+                <div class="col-lg-4 col-md-9 info-item">
                     <div class="img-wrapper d-flex align-items-center">
                         <img src="img/info-2.png" alt="Реферальная система" class="info-image">
                     </div>
                     <h3 class="info-title">Реферальная система</h3>
                     <p class="info-description ">На сервисе работает партнерская программа, за каждый обмен приведенного вами клиента, вы получаете 0.5% с нашей прибыли.</p>
                 </div>
-                <div class="col-lg-4 col-md-9  p-3 info-item">
+                <div class="col-lg-4 col-md-9   info-item">
                     <div class=" img-wrapper d-flex align-items-center ">
                         <img src="img/info-3.png" alt="Онлайн поддержка " class="info-image ">
                     </div>
@@ -310,15 +310,15 @@
     </section>
 
     <footer class="footer">
-        <div class="container-fluid ">
+        <div class="container">
             <div class="row d-flex align-items-center ">
-                <div class="col-xl-3 col-md-12 col-sm-12  d-flex justify-content-center ">
+                <div class="col col-xl-3 col-md-12 col-sm-12  d-flex justify-content-center ">
                     <a href="# " class="header-link ">
                         <img src="./img/logo.svg " alt="moneyexchange " class="header-logo ">
                     </a>
                 </div>
                 <!-- /.col-lg-2 -->
-                <div class=" col-xl-6 col-md-10 col-sm-12 d-flex justify-content-center ">
+                <div class=" col col-xl-6 col-md-10 col-sm-12 d-flex justify-content-center ">
                     <nav>
                         <ul class="navigation d-flex align-items-center ">
                             <li class="navigation-item ">
@@ -345,7 +345,7 @@
                     </nav>
                 </div>
                 <!-- /.col-lg-7 -->
-                <div class=" col-xl-3 col-md-2 col-sm-12 d-flex justify-content-center ">
+                <div class=" col col-xl-3 col-md-2 col-sm-12 d-flex justify-content-center ">
                     <a href="# " class="social-link px-2 ">
                         <img src="img/vk.png " alt="вконтакте " class="social ">
                     </a>
