--- a/index.html
+++ b/index.html
@@ -18,44 +18,44 @@
 
 <body>
     <header class="header">
-        <div class="container"></div>
-        <div class="row d-flex align-items-center ">
-            <div class="col col-xl-3 col-lg-4 col-md-3 col-sm-12 d-flex justify-content-center">
-                <a href="#" class="header-link">
-                    <img src="./img/logo.svg" alt="moneyexchange" class="header-logo">
-                </a>
-            </div>
-            <!-- /.col-lg-2 -->
-            <div class="col col-xl-6  col-lg-5  col-md-6 col-sm-6 col-xs-12">
-                <nav>
-                    <ul class="navigation d-flex justify-content-center  align-items-center">
-                        <li class="navigation-item">
-                            <a href="#" class="navigation-link">
+        <div class="container">
+            <div class="row d-flex align-items-center ">
+                <div class="col col-xl-3 col-lg-4 col-md-3 col-sm-12 d-flex justify-content-center">
+                    <a href="#" class="header-link">
+                        <img src="./img/logo.svg" alt="moneyexchange" class="header-logo">
+                    </a>
+                </div>
+                <!-- /.col-lg-2 -->
+                <div class="col col-xl-6  col-lg-5  col-md-6 col-sm-6 col-xs-12">
+                    <nav>
+                        <ul class="navigation d-flex justify-content-center  align-items-center">
+                            <li class="navigation-item">
+                                <a href="#" class="navigation-link">
                                 Компания
                             </a>
-                        </li>
-                        <li class="navigation-item">
-                            <a href="#" class="navigation-link">
+                            </li>
+                            <li class="navigation-item">
+                                <a href="#" class="navigation-link">
                                 Блог
                             </a>
-                        </li>
-                        <li class="navigation-item">
-                            <a href="#" class="navigation-link">
+                            </li>
+                            <li class="navigation-item">
+                                <a href="#" class="navigation-link">
                                 Контакты
                             </a>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
-            <!-- /.col-lg-7 -->
-            <div class="col col-xl-3  col-lg-3  col-md-3 col-sm-6 col-xs-12 d-flex justify-content-center d-flex align-items-center p-0 m-0">
-                <a href="#" class="login-link">
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+                <!-- /.col-lg-7 -->
+                <div class="col col-xl-3  col-lg-3  col-md-3 col-sm-6 col-xs-12 d-flex justify-content-center d-flex align-items-center p-0 m-0">
+                    <a href="#" class="login-link">
                         Войти
                     </a>
-                <button class="button">Регистрация</button>
+                    <button class="button">Регистрация</button>
+                </div>
+                <!-- /.col-lg-3 -->
             </div>
-            <!-- /.col-lg-3 -->
-        </div>
         </div>
     </header>
     <section class="calc">
