--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Money EXchange</title>
+
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;700;900&display=swap" rel="stylesheet">
 
@@ -13,6 +14,7 @@
     <link rel="stylesheet" href="css/normalize.css" class="css">
     <link rel="stylesheet" href="css/style.css" class="css">
 
+    <script src="js/script.js" defer></script>
 
 </head>
 
@@ -59,12 +61,12 @@
         </div>
     </header>
     <section class="calc">
-        <span class="calc-header">
+        <h2 class="calc-header">
             Мультивалютный <br> обменный сервис 24/7
-        </span>
-        <span class="calc-info">
+        </h2>
+        <h3 class="calc-info">
             Быстрый обмен без скрытых комиссий
-        </span>
+        </h3>
 
         <div class="container calc-container">
 
@@ -98,7 +100,6 @@
                             <option value="USD">USD</option>
                             <option value="RUB">RUB</option>
                         </select>
-
                     </div>
                     <hr class="calc-line">
                 </div>
@@ -147,7 +148,7 @@
                     </div>
                     <!-- /.col-6 -->
                     <div class="col-lg-7 col-md-12 ">
-                        <div class="image-history-wrapper "> <img src="img/history.png " alt=" " class="image-history "></div>
+                        <div class="image-history-wrapper "> <img src="img/history.png " alt="обмен валюты" class="image-history "></div>
 
                     </div>
                     <!-- /.col-6 -->
@@ -165,7 +166,7 @@
             <h2 class="reserve-title ">Резерв валюты</h2>
             <div class="row ">
                 <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 d-flex currency-info align-items-center ">
-                    <div class="currency-icon yandex "> <img src="img/yandex.png " alt=" " class="icon-currency "></div>
+                    <div class="currency-icon yandex "> <img src="img/yandex.png " alt="яндекс-деньги" class="icon-currency "></div>
                     <!-- /.currency-icon -->
                     <div class="currency ">
                         <p class="currency-name ">Yandex RUB</p>
@@ -178,7 +179,7 @@
                 <!-- /.col-3 d-flex align-items-center -->
                 <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 currency-info d-flex align-items-center ">
                     <div class="currency-icon ethereum ">
-                        <img src="img/etherium.png " alt=" " class="icon-currency ">
+                        <img src="img/etherium.png " alt="ethereum" class="icon-currency ">
                     </div>
                     <!-- /.currency-icon -->
                     <div class="currency ">
@@ -191,7 +192,7 @@
                 </div>
                 <!-- /.col-3 d-flex align-items-center -->
                 <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 currency-info d-flex align-items-center ">
-                    <div class="currency-icon bitcoin "><img src="img/bitcoin.png " alt=" " class="icon-currency "></div>
+                    <div class="currency-icon bitcoin "><img src="img/bitcoin.png " alt="bitcoin" class="icon-currency "></div>
                     <!-- /.currency-icon -->
                     <div class="currency ">
                         <p class="currency-name ">Bitcoin BTC</p>
@@ -203,7 +204,7 @@
                 </div>
                 <!-- /.col-3 d-flex align-items-center -->
                 <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 currency-info d-flex align-items-center ">
-                    <div class="currency-icon sberbank "><img src="img/sberpank.png " alt=" " class="icon-currency "></div>
+                    <div class="currency-icon sberbank "><img src="img/sberpank.png " alt="сбербанк" class="icon-currency "></div>
                     <!-- /.currency-icon -->
                     <div class="currency ">
                         <p class="currency-name ">Сбербанк RUB</p>
@@ -215,7 +216,7 @@
                 </div>
                 <!-- /.col-3 d-flex align-items-center -->
                 <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 currency-info d-flex align-items-center ">
-                    <div class="currency-icon privat "><img src="img/private.png " alt=" " class="icon-currency "></div>
+                    <div class="currency-icon privat "><img src="img/private.png " alt="приват-банк" class="icon-currency "></div>
                     <!-- /.currency-icon -->
                     <div class="currency ">
                         <p class="currency-name ">Приват 24 UAH</p>
@@ -227,7 +228,7 @@
                 </div>
                 <!-- /.col-3 d-flex align-items-center -->
                 <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 currency-info d-flex align-items-center ">
-                    <div class="currency-icon paypal "><img src="img/paypal.png " alt=" " class="icon-currency "></div>
+                    <div class="currency-icon paypal "><img src="img/paypal.png " alt="paypal" class="icon-currency "></div>
                     <!-- /.currency-icon -->
                     <div class="currency align-items-center ">
                         <p class="currency-name ">PayPal USD</p>
@@ -239,7 +240,7 @@
                 </div>
                 <!-- /.col-3 d-flex align-items-center -->
                 <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 currency-info d-flex align-items-center ">
-                    <div class="currency-icon pm d-flex align-items-center "><img src="img/PM.png " alt=" " class="icon-currency "></div>
+                    <div class="currency-icon pm d-flex align-items-center "><img src="img/PM.png " alt="PM" class="icon-currency "></div>
                     <!-- /.currency-icon -->
                     <div class="currency ">
                         <p class="currency-name ">PM USD</p>
@@ -251,7 +252,7 @@
                 </div>
                 <!-- /.col-3 d-flex align-items-center -->
                 <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 currency-info d-flex align-items-center ">
-                    <div class="currency-icon qiwi "><img src="img/qiwi.png " alt=" " class="icon-currency "></div>
+                    <div class="currency-icon qiwi "><img src="img/qiwi.png " alt="qiwi" class="icon-currency "></div>
                     <!-- /.currency-icon -->
                     <div class="currency ">
                         <p class="currency-name ">Qiwi RUB</p>
@@ -297,7 +298,7 @@
             <div class="row ">
                 <div class="col-lg-6 col-md-12 ">
                     <div class="img-wrapper-exchange ">
-                        <img class="img-exchange " src="img/back-1.png " alt=" " class="img-exchange ">
+                        <img class="img-exchange " src="img/back-1.png " alt="Обменять">
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-12 exchange ">
@@ -326,7 +327,6 @@
                                 Карта сайта
                             </a>
                             </li>
-
                             <li class="navigation-item ">
                                 <a href="# " class="navigation-link ">
                                 Правила сайта
@@ -343,10 +343,10 @@
                 <!-- /.col-lg-7 -->
                 <div class=" col col-xl-3 col-md-2 col-sm-12 d-flex justify-content-center ">
                     <a href="# " class="social-link px-2 ">
-                        <img src="img/vk.png " alt="вконтакте " class="social ">
+                        <img src="img/vk.png " alt="вконтакте" class="social ">
                     </a>
                     <a href="# " class="social-link px-2 ">
-                        <img src="img/instagram.png " alt="инстаграмм " class="social ">
+                        <img src="img/instagram.png " alt="инстаграм" class="social ">
                     </a>
                 </div>
                 <!-- /.col-lg-3 -->
