--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="container calc-container">
 
             <div class="row d-flex justify-content-center calc-change">
-                <div class="col-xl-4 col-md-8 col-sm-12">
+                <div class="calc-giv col-xl-4 col-md-8 col-sm-12">
                     <span class="calc-change-title">Вы отдаете</span>
                     <span class="calc-change-sum">Сумма</span>
                     <div class="calc-input d-flex align-items-center">
@@ -86,7 +86,7 @@
                 </div>
                 <div class="col-xl-1 col-md-4 col-sm-12 d-flex justify-content-center align-self-end">
                     <img src="img/arrows.svg" alt="" class=" arrows"></div>
-                <div class="col-xl-4 col-md-8 col-sm-12">
+                <div class="calc-get col-xl-4 col-md-8 col-sm-12">
                     <span class="calc-change-title">Вы получаете</span>
                     <span class="comission">c учетом комиссии ПС (0.5%)</span>
                     <span class="calc-change-sum">Сумма</span>
