--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="container calc-container">
 
             <div class="row d-flex justify-content-center calc-change">
-                <div class="calc-giv col-xl-4 col-md-8 col-sm-12">
+                <div class="calc-give col-xl-4 col-md-8 col-sm-12">
                     <span class="calc-change-title">Вы отдаете</span>
                     <span class="calc-change-sum">Сумма</span>
                     <div class="calc-input d-flex align-items-center">
@@ -309,14 +309,14 @@
     <footer class="footer">
         <div class="container">
             <div class="row d-flex align-items-center ">
-                <div class="col col-xl-3 col-md-12 col-sm-12  d-flex justify-content-center ">
+                <div class="col-lg-3 col-md-12  d-flex justify-content-center ">
                     <a href="# " class="header-link ">
                         <img src="./img/logo.svg " alt="moneyexchange " class="header-logo ">
                     </a>
                 </div>
                 <!-- /.col-lg-2 -->
-                <div class=" col col-xl-6 col-md-10 col-sm-12 d-flex justify-content-center ">
-                    <nav>
+                <div class="  col-lg-6  col-md-12   d-flex justify-content-center ">
+                    <nav class=" footer-navigation">
                         <ul class="navigation d-flex align-items-center ">
                             <li class="navigation-item ">
                                 <a href="# " class="navigation-link ">
@@ -337,7 +337,7 @@
                     </nav>
                 </div>
                 <!-- /.col-lg-7 -->
-                <div class=" col col-xl-3 col-md-2 col-sm-12 d-flex justify-content-center ">
+                <div class="   col-lg-3  col-md-12  d-flex justify-content-center ">
                     <a href="# " class="social-link px-2 ">
                         <img src="img/vk.png " alt="вконтакте" class="social ">
                     </a>
